# folder-struct-maker

./: .gitignore  Dockerfile  README.md  features.md  presets.json  pyproject.toml
flutter_view/: pubspec.yaml
flutter_view/lib/: constants.dart  main.dart
flutter_view/lib/Features/: bored_model.dart  consumer.dart  provider.dart
flutter_view/lib/components/: chart_spline.dart  chart_spline2.dart  chart_spline3.dart  container_bar.dart  drawer_list_tile.dart  sidemenu.dart
flutter_view/lib/controllers/: reservation_provider.dart
flutter_view/lib/models/: data.dart  main_side_list.dart  reservation_date_model.dart  ring_chart_data_model.dart  visits_data.dart
flutter_view/lib/screens/: main_screen.dart
flutter_view/lib/services/: file_chooser.dart  file_io.dart  row_generator.dart  template_generator.dart
flutter_view/lib/utils/: format_currency.dart  get_user_name.dart
flutter_view/linux/: CMakeLists.txt
flutter_view/temp/: myFile.txt
flutter_view/test/: widget_test.dart
flutter_view/windows/: CMakeLists.txt
src/: Gui.py  dataservice.py  main.py  presets.json  structures.py  variables.py
src/Pages/: presets_page.py  variables_page.py
src/Services/: attributes.json  dataservice.py  env_variables.py  event_bus.py  logger.py  presets.json  test.dataservice.py
src/components/: tabs.py
src/data_store/: presets.json
src/flet-gui/: flet_layout.py  flet_main.py
src/flet-gui-app/: actions.py  main.py  structures.py
src/flet_gui_app/: actions.py  dataservice.py  main.py  presets.json  structures.py  utils.py
(+65 files in other folders)
