[tool.poetry]
name = "folder-struct"
version = "0.1.0"
description = "An Interface to create nested folder,file and process structures"
authors = ["jacin <jacin.lowe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PySide6 = "^6.5.2"
reloading = "1.1.2"
flet = "^0.9.0"
Pillow = "^10.0.0"
pyinstaller = "^5.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
